# python-project-lvl1

./: .gitignore  Makefile  README.md  README.md.orig  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml  github-actions.yml
brain_games/: Congratulations_fail.py  What_is_your_name.py  body_gcd.py  body_prime.py  body_progression.py  calculation_rnd.py  cli.py  engine.py  filter_string.py  gcd_func.py  isprime.py  no_yes.py  operator.py  questions.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py  progresson.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
