[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["K0Hb <goplit2010.konovalov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:brain_games"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
